testing/tests/ui/missing_ext.stderr
error: must include 'ext' attribute when using 'source' attribute
 --> tests/ui/missing_ext.rs:4:3
  |
4 | #[template(source = "ğŸ™‚")]
  |   ^^^^^^^^
