testing/tests/ui/missing_ext.rs
use askama::Template;

#[derive(Template)]
#[template(source = "ğŸ™‚")]
struct MissingExt;

fn main() {
}
